--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -4,12 +4,12 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://x.com/VaidikBhrdwj" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img data-th-src="@{'/images/technical-support.png'}" class="h-8" alt="Flowbite Logo">
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Contact Managaer/By Vaidik</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Contact Manager</span>
     </a>
     <div class="flex md:order-2 gap-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
         <button id="theme_change_button" class="text-gray-950 bg-gray-200 hover:bg-gray-300 text-sm px-4 py-2 text-center dark:hover:bg-blue-700 dark:text-white dark:bg-gray-400 border-none"><i class="fa-solid fa-circle-half-stroke"></i><span>Light</span></button>
         <a data-th-href="@{'/login'}" type="button" class="text-white bg-gray-800 hover:bg-gray-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</a>
-        <a data-th-href="@{'/signup'}" type="button" class="text-white bg-gray-800 hover:bg-gray-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Signup</a>
+        <a data-th-href="@{'/register'}" type="button" class="text-white bg-gray-800 hover:bg-gray-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Register</a>
         <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
